# FTCIR

./: .gitignore  .gitmodules  README.md  build.common.gradle  build.dependencies.gradle  gradle.properties
FtcRobotController/: build.gradle
TeamCode/: build.gradle
TeamCode/src/main/cpp/: CMakeLists.txt  lib.cpp
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: DriverControl.java  HeadlessDriving.java  HeadlessDrivingJP.java  HeadlessDrivingUS.java  Marc.java  PIDController.java  PIDFController.java  RobotController.java  Test.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Driving/: HeadlessDriving.java  HeadlessDrivingJP.java  HeadlessDrivingUS.java  Marc.java  MouseTest.java  ODTest.java  ObjectDetection.java  PIDController.java  PIDFController.java  RobotController.java  T265Test.java  TensorFlowTest.java  Test.java  VuforiaTest.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Utils/: GamePadController.java  Odometry.java  PIDController.java  PIDFController.java
